5.2/ja/9-backend.rst
管理者用のバックエンドをセットアップする
============================================================

.. index::
    single: EasyAdmin
    single: Admin
    single: Backend

データベースに次のカンファレンスを追加するのは、プロジェクトの管理者の仕事です。 *管理者用のバックエンド* は、Webサイトの保護された場所となり、そこで *プロジェクト管理者* は、Webサイトのデータを管理したり、フィードバックをモデレートしたりできます。

早く作成するのにどうしましょうか？プロジェクトのモデルに基づく管理者用のバックエンドを生成することができる EasyAdmin バンドルを使いましょう。

EasyAdmin を設定する
-------------------------

まず、EasyAdmin をプロジェクトの依存に追加します:

.. code-block:: bash

    $ symfony composer req "admin:^3"

EasyAdminは特別なコントローラーによって、アプリケーションの管理者画面を自動的に作成します。特別なコントローラを保存するために、新しく ``src/Controller/Admin/`` ディレクトリを作りましょう。

.. code-block:: bash

    $ mkdir src/Controller/Admin/

EasyAdminを使い始めるにあたって、Webサイトのデータを管理するメインの入口になる "管理者ダッシュボード" を作りましょう。

.. code-block:: bash
    :class: answers(DashboardController||src/Controller/Admin/)

    $ symfony console make:admin:dashboard

デフォルトの答えをそのまま選んでいくと次のようなコントローラーができます:

.. code-block:: php
    :caption: src/Controller/Admin/DashboardController.php
    :class: ignore

    namespace App\Controller\Admin;

    use EasyCorp\Bundle\EasyAdminBundle\Config\Dashboard;
    use EasyCorp\Bundle\EasyAdminBundle\Config\MenuItem;
    use EasyCorp\Bundle\EasyAdminBundle\Controller\AbstractDashboardController;
    use Symfony\Component\HttpFoundation\Response;
    use Symfony\Component\Routing\Annotation\Route;

    class DashboardController extends AbstractDashboardController
    {
        /**
         * @Route("/admin", name="admin")
         */
        public function index(): Response
        {
            return parent::index();
        }

        public function configureDashboard(): Dashboard
        {
            return Dashboard::new()
                ->setTitle('Guestbook');
        }

        public function configureMenuItems(): iterable
        {
            yield MenuItem::linktoDashboard('Dashboard', 'fa fa-home');
            // yield MenuItem::linkToCrud('The Label', 'icon class', EntityClass::class);
        }
    }

慣例により全ての管理者用コントローラーは ``App\Controller\Admin`` というネームスペースに保存されます。

生成された管理者用バックエンドには、 ``index()`` メソッドに対して設定した ``/admin`` からアクセスできます。このURLは何でも好きなものに変更することができます:

.. figure:: screenshots/easy-admin-empty.png
    :alt: /admin
    :align: center
    :figclass: with-browser

ドーン! 素敵な見た目の管理者インターフェースができました。しかも必要に応じてカスタマイズできます。

.. index::
    single: CRUD

次のステップでは、カンファレンスとコメントを管理するためのコントローラーを作ります。

ダッシュボードのコントローラの中に、"CRUDs" へのリンクを追加するというコメントが入った ``configureMenuItem()`` メソッドがあることに気づいたかもしれません。 **CRUD** は "Create, Read, Update, Delete" （作成、参照、更新、削除）の頭文字を取った略語で、エンティティに対して行う4つの基本的な操作です。この4つはまさに管理者画面でやりたいことです。EasyAdminでは検索と絞り込みもできるので、次のレベルまで対応しています。

カンファレンスのためのCRUDを作ってみます:

.. code-block:: bash
    :class: answers(1||src/Controller/Admin/||App\\Controller\\Admin)

    $ symfony console make:admin:crud

カンファレンスの管理者画面を作るために ``1`` を選び、残りの質問にはデフォルトの答えを選んでください。次のようなファイルが作成されます:

.. code-block:: php
    :caption: src/Controller/Admin/ConferenceCrudController.php
    :class: ignore

    namespace App\Controller\Admin;

    use App\Entity\Conference;
    use EasyCorp\Bundle\EasyAdminBundle\Controller\AbstractCrudController;

    class ConferenceCrudController extends AbstractCrudController
    {
        public static function getEntityFqcn(): string
        {
            return Conference::class;
        }

        /*
        public function configureFields(string $pageName): iterable
        {
            return [
                IdField::new('id'),
                TextField::new('title'),
                TextEditorField::new('description'),
            ];
        }
        */
    }

コメントについても同じことをします:

.. code-block:: bash
    :class: answers(0||src/Controller/Admin/||App\\Controller\\Admin)

    $ symfony console make:admin:crud

最後のステップでは、カンファレンスとコメントの管理者用CRUD画面をダッシュボードにリンクします:

.. code-block:: diff
    :caption: patch_file

    --- a/src/Controller/Admin/DashboardController.php
    +++ b/src/Controller/Admin/DashboardController.php
    @@ -2,6 +2,8 @@

     namespace App\Controller\Admin;

    +use App\Entity\Comment;
    +use App\Entity\Conference;
     use EasyCorp\Bundle\EasyAdminBundle\Config\Dashboard;
     use EasyCorp\Bundle\EasyAdminBundle\Config\MenuItem;
     use EasyCorp\Bundle\EasyAdminBundle\Controller\AbstractDashboardController;
    @@ -26,7 +28,8 @@ class DashboardController extends AbstractDashboardController

         public function configureMenuItems(): iterable
         {
    -        yield MenuItem::linktoDashboard('Dashboard', 'fa fa-home');
    -        // yield MenuItem::linkToCrud('The Label', 'fas fa-list', EntityClass::class);
    +        yield MenuItem::linktoRoute('Back to the website', 'fas fa-home', 'homepage');
    +        yield MenuItem::linkToCrud('Conferences', 'fas fa-map-marker-alt', Conference::class);
    +        yield MenuItem::linkToCrud('Comments', 'fas fa-comments', Comment::class);
         }
     }

``configureMenuItems()`` メソッドを上書きして、関連するアイコンつきのメニューを追加し、更にWebサイトのトップページに戻るリンクも追加しました。

EasyAdminでは ``MenuItem::linkToRoute()`` メソッドにより、エンティティのCRUDに簡単にリンクするAPIを公開しています。

メインのダッシュボードページは現時点では空っぽです。ダッシュボードは、様々な統計や関連情報を表示することができる場所です。ダッシュボードに表示したい重要事項は特にないので、カンファレンス一覧にリダイレクトすることにしましょう。

.. code-block:: diff
    :caption: patch_file

    --- a/src/Controller/Admin/DashboardController.php
    +++ b/src/Controller/Admin/DashboardController.php
    @@ -7,6 +7,7 @@ use App\Entity\Conference;
     use EasyCorp\Bundle\EasyAdminBundle\Config\Dashboard;
     use EasyCorp\Bundle\EasyAdminBundle\Config\MenuItem;
     use EasyCorp\Bundle\EasyAdminBundle\Controller\AbstractDashboardController;
    +use EasyCorp\Bundle\EasyAdminBundle\Router\AdminUrlGenerator;
     use Symfony\Component\HttpFoundation\Response;
     use Symfony\Component\Routing\Annotation\Route;

    @@ -17,7 +18,10 @@ class DashboardController extends AbstractDashboardController
          */
         public function index(): Response
         {
    -        return parent::index();
    +        $routeBuilder = $this->get(AdminUrlGenerator::class);
    +        $url = $routeBuilder->setController(ConferenceCrudController::class)->generateUrl();
    +
    +        return $this->redirect($url);
         }

         public function configureDashboard(): Dashboard

エンティティのリレーション（コメントと紐づくカンファレンス）を表示するとき、EasyAdminはカンファレンスの文字列としての表現を使おうとします。エンティティに ``__toString()`` マジックメソッドが定義されていなければ、デフォルトとしてエンティティの名前と主キーを利用します（ ``Conference #1`` のように）。リレーションの表示をより意味のあるものにするためには、 ``Conference`` クラスにメソッドを追加しましょう:

.. code-block:: diff
    :caption: patch_file

    --- a/src/Entity/Conference.php
    +++ b/src/Entity/Conference.php
    @@ -44,6 +44,11 @@ class Conference
             $this->comments = new ArrayCollection();
         }

    +    public function __toString(): string
    +    {
    +        return $this->city.' '.$this->year;
    +    }
    +
         public function getId(): ?int
         {
             return $this->id;

``Comment`` クラスも同じようにしましょう:

.. code-block:: diff
    :caption: patch_file

    --- a/src/Entity/Comment.php
    +++ b/src/Entity/Comment.php
    @@ -48,6 +48,11 @@ class Comment
          */
         private $photoFilename;

    +    public function __toString(): string
    +    {
    +        return (string) $this->getEmail();
    +    }
    +
         public function getId(): ?int
         {
             return $this->id;

これで、管理者用バックエンドからカンファレンスを直接追加/変更/削除することができるようになりました。一つ以上カンファレンスを作成して遊んでみましょう。

.. figure:: screenshots/easy-admin.png
    :alt: /admin
    :align: center
    :figclass: with-browser

写真なしのコメントを追加しましょう。ここでは日付は手動でセットしましょう; 後のステップで ``createdAt`` カラムを自動的にセットするようにします。

.. figure:: screenshots/easy-admin-comments.png
    :alt: /admin?crudAction=index&crudId=2bfa220&menuIndex=2&submenuIndex=-1
    :align: center
    :figclass: with-browser

EasyAdmin をカスタマイズする
-------------------------------------

デフォルトの管理者用のバックエンドが正しく動くようになりましたが、カスタマイズしてさらに改善することができます。コメントのエンティティに簡単な修正をして、どんなことができるか見てみましょう:

.. code-block:: diff
    :caption: patch_file

    --- a/src/Controller/Admin/CommentCrudController.php
    +++ b/src/Controller/Admin/CommentCrudController.php
    @@ -3,7 +3,15 @@
     namespace App\Controller\Admin;

     use App\Entity\Comment;
    +use EasyCorp\Bundle\EasyAdminBundle\Config\Crud;
    +use EasyCorp\Bundle\EasyAdminBundle\Config\Filters;
     use EasyCorp\Bundle\EasyAdminBundle\Controller\AbstractCrudController;
    +use EasyCorp\Bundle\EasyAdminBundle\Field\AssociationField;
    +use EasyCorp\Bundle\EasyAdminBundle\Field\DateTimeField;
    +use EasyCorp\Bundle\EasyAdminBundle\Field\EmailField;
    +use EasyCorp\Bundle\EasyAdminBundle\Field\TextareaField;
    +use EasyCorp\Bundle\EasyAdminBundle\Field\TextField;
    +use EasyCorp\Bundle\EasyAdminBundle\Filter\EntityFilter;

     class CommentCrudController extends AbstractCrudController
     {
    @@ -12,14 +20,44 @@ class CommentCrudController extends AbstractCrudController
             return Comment::class;
         }

    -    /*
    +    public function configureCrud(Crud $crud): Crud
    +    {
    +        return $crud
    +            ->setEntityLabelInSingular('Conference Comment')
    +            ->setEntityLabelInPlural('Conference Comments')
    +            ->setSearchFields(['author', 'text', 'email'])
    +            ->setDefaultSort(['createdAt' => 'DESC']);
    +        ;
    +    }
    +
    +    public function configureFilters(Filters $filters): Filters
    +    {
    +        return $filters
    +            ->add(EntityFilter::new('conference'))
    +        ;
    +    }
    +
         public function configureFields(string $pageName): iterable
         {
    -        return [
    -            IdField::new('id'),
    -            TextField::new('title'),
    -            TextEditorField::new('description'),
    -        ];
    +        yield AssociationField::new('conference');
    +        yield TextField::new('author');
    +        yield EmailField::new('email');
    +        yield TextareaField::new('text')
    +            ->hideOnIndex()
    +        ;
    +        yield TextField::new('photoFilename')
    +            ->onlyOnIndex()
    +        ;
    +
    +        $createdAt = DateTimeField::new('createdAt')->setFormTypeOptions([
    +            'html5' => true,
    +            'years' => range(date('Y'), date('Y') + 5),
    +            'widget' => 'single_text',
    +        ]);
    +        if (Crud::PAGE_EDIT === $pageName) {
    +            yield $createdAt->setFormTypeOption('disabled', true);
    +        } else {
    +            yield $createdAt;
    +        }
         }
    -    */
     }

``Comment`` 画面をカスタマイズするために、 ``configureFields()`` メソッドで明示的に項目名を列挙すると、思い通りの順番で項目を並べることができます。項目ごとにより詳細に設定することもできます。たとえば、一覧画面ではテキスト項目を隠すことができます。

``configureFilters()`` メソッドでは、検索画面にどんな絞り込み項目を表示するかを定義することができます。

.. figure:: screenshots/easy-admin-filter.png
    :alt: /admin?crudAction=index&crudId=2bfa220&menuIndex=2&submenuIndex=-1
    :align: center
    :figclass: with-browser

これらのカスタマイズで、EasyAdmin を使って可能なことを少し紹介をしました。

カンファレンスでコメントをフィルターしたり、メールアドレスでコメントを検索したりして、管理者画面を遊んでみてください。問題が一つあるとすれば、誰もがバックエンドにアクセスできるようになっていることですが、後のステップでセキュアにしていきますので、心配しないでください。

.. code-block:: bash
    :class: hide

    $ symfony run psql -c "TRUNCATE conference RESTART IDENTITY CASCADE"

.. sidebar:: より深く学ぶために

    * `EasyAdmin ドキュメント <https://symfony.com/doc/3.x/bundles/EasyAdminBundle/index.html>`_;

    * `Symfony フレームワーク設定リファレンス <https://symfony.com/doc/current/reference/configuration/framework.html>`_;

    * `PHP マジックメソッド <https://www.php.net/manual/en/language.oop5.magic.php>`_.
